--- a/gitee.com/Kenneth-Lee-2012/MySummary/alloy.html
+++ b/gitee.com/Kenneth-Lee-2012/MySummary/alloy.html
@@ -225,7 +225,7 @@ In Silence。但无论如何，我们认为原理是一样的。</p>
 <li><p>量词：\ :math:<code>\forall \exists</code></p>
 </li>
 </ol>
-<p>然后我们的所以范围定义，就都用这些运算和一组集合的基本公理来约束了。</p>
+<p>然后我们的所有范围定义，就都用这些运算和一组集合的基本公理来约束了。</p>
 <p>实际上，正如Charles教授说的，数学家们也保证不了所有的推理都完全按这种规整化的标
 准来描述（因为工程成本实在是太高了），只是说，我们有了这样一个标准，当我们遇到
 在理解上有分歧的地方，我们可以随时细化到这个程度，来消除这种分歧。::</p>
