--- a/index.html
+++ b/index.html
@@ -6,12 +6,22 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 49 个博客、8577 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 49 个博客、8581 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=jasonkayzk.github.io/%E3%82%A2%E3%83%8B%E3%83%A1%E3%80%8C%E9%A2%A8%E3%81%8C%E5%BC%B7%E3%81%8F%E5%90%B9%E3%81%84%E3%81%A6%E3%81%84%E3%82%8B%E3%80%8D%E5%90%8D%E8%A8%80%E3%81%AE%E3%81%BE%E3%81%A8%E3%82%81.html>2024-06-17 アニメ「風が強く吹いている」名言のまとめ</a></li>
+
+<li><a href=kexizeroing.github.io/Rerankers%20%E2%80%93%20Beyond%20basic%20RAG.html>2024-06-16 Rerankers – Beyond basic RAG</a></li>
+
+<li><a href=kexizeroing.github.io/Unlock%20the%20power%20of%20Generative%20UI.html>2024-06-16 Unlock the power of Generative UI</a></li>
+
+<li><a href=mabbs.github.io/Hackintosh%E4%BD%BF%E7%94%A8%E4%BD%93%E9%AA%8C.html>2024-06-16 Hackintosh使用体验</a></li>
+
+<li><a href=young-lord.github.io/Windows%20%E4%BD%BF%E7%94%A8%20USB_IP%20%E9%80%9A%E8%BF%87%E7%BD%91%E7%BB%9C%E5%85%B1%E4%BA%AB%20USB%20%E8%AE%BE%E5%A4%87.html>2024-06-16 Windows 使用 USB/IP 通过网络共享 USB 设备</a></li>
 
 <li><a href=luyuhuang.github.io/%E7%94%A8%20C%20%E8%AF%AD%E8%A8%80%E5%AE%9E%E7%8E%B0%E5%8D%8F%E7%A8%8B.html>2024-06-14 用 C 语言实现协程</a></li>
 
@@ -170,8 +180,6 @@
 <li><a href=yuanj.top/%E6%8F%AD%E7%A4%BA%E7%94%9F%E5%91%BD%E8%B5%B7%E6%BA%90%E4%B9%8B%E8%B0%9C%7C%E4%B8%BA%E4%BB%80%E4%B9%88%E8%9B%8B%E7%99%BD%E8%B4%A8%E9%83%BD%E6%98%AF%E2%80%9C%E5%B7%A6%E6%92%87%E5%AD%90%E2%80%9D%EF%BC%9F.html>2024-04-18 揭示生命起源之谜|为什么蛋白质都是“左撇子”？</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20-%20356%20%E6%8A%93%E7%94%9F%E8%9A%9D.html>2024-04-17 新爸五年计划 - 356 抓生蚝</a></li>
-
-<li><a href=kexizeroing.github.io/Unlock%20the%20power%20of%20Generative%20UI.html>2024-04-16 Unlock the power of Generative UI</a></li>
 
 <li><a href=yuanj.top/%E6%9A%B4%E9%A3%8E%E9%9B%A8%E5%A4%9C%E7%9A%84%E6%80%9D%E8%80%83.html>2024-04-16 暴风雨夜的思考</a></li>
 
