--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -132,10 +132,10 @@ order: 2</h2>
 <p>Buttons Generator: https://markodenic.com/tools/buttons-generator</p>
 <p>Box-shadow: https://neumorphism.io</p>
 <p>Beautiful hand-crafted SVG icons: https://heroicons.com</p>
-<p>Guide users through a tour of your app: https://shepherdjs.dev</p>
 <p>Drive user's focus across the page: https://driverjs.com</p>
 <p>Split an element by words, characters, children and more: https://splitting.js.org</p>
 <p>Lightweight fuzzy-search library: https://fusejs.io</p>
+<p>Tiny and powerful in-memory JavaScript full-text search engine: https://github.com/lucaong/minisearch</p>
 <p>Create full screen pages fast and simple: https://github.com/alvarotrigo/fullPage.js</p>
 <p>A collection of free Tailwind CSS components: https://www.hyperui.dev</p>
 <p>daisyUI components - Use Tailwind CSS but write fewer class names: https://daisyui.com</p>
@@ -241,7 +241,9 @@ order: 2</h2>
 <p>Hands on with the Vercel AI SDK: https://github.com/nicoalbanese/ai-sdk-fundamentals</p>
 <p>AI agent stdlib that works with any LLM and AI SDK: https://github.com/transitive-bullshit/agentic</p>
 <p>An AI chatbot in Win95 style: https://wingpt.vercel.app</p>
+<p>A Webapp that uses RAG to interact with a PDF directly in the browser: https://pdf.nico.dev</p>
 <p>Real-time in-browser speech recognition with OpenAI Whisper: https://huggingface.co/spaces/Xenova/realtime-whisper-webgpu</p>
+<p>High-Performance In-Browser LLM Inference Engine: https://github.com/mlc-ai/web-llm</p>
 <hr/>
 <h2>Machine Learning</h2>
 <p>Gain the skills you need to do independent data science projects: https://www.kaggle.com/learn</p>
