--- a/kexizeroing.github.io/Fetch API requests and CORS.html
+++ b/kexizeroing.github.io/Fetch API requests and CORS.html
@@ -26,6 +26,7 @@ updatedDate: "Jan 13 2024"</h2>
 <li><strong>mode</strong>: The mode you want to use for the request, e.g., <code>cors</code>, <code>no-cors</code>, or <code>same-origin</code>. (<code>cors</code> is default)</li>
 <li><strong>credentials</strong>: The request credentials you want to use for the request, e.g., <code>omit</code>, <code>same-origin</code>, or <code>include</code>. To automatically send cookies for the current domain, this option must be provided. (<code>same-origin</code> is default)</li>
 </ul>
+<p>In addition, the <code>keepalive</code> option can be used to allow the request to outlive the page. Fetch with the <code>keepalive</code> flag is a replacement for the <code>Navigator.sendBeacon()</code> API.</p>
 <pre><code class="language-javascript">async function postData(url = '', data = {}) {
   const response = await fetch(url, {
     method: 'POST',
