--- a/kexizeroing.github.io/Server-sent events with examples.html
+++ b/kexizeroing.github.io/Server-sent events with examples.html
@@ -91,7 +91,11 @@ app.listen(3000, () =&gt; console.log('Listening on port 3000...'));
 &lt; event: status
 &lt; data: {"msg": "hi"}\n\n
 </code></pre>
-<p>With the default browser EventSource API, you can only make GET requests, and you cannot pass in a request body and custom request headers. <a href="https://github.com/Azure/fetch-event-source">fetch-event-source</a> provides a better API for making Event Source requests.</p>
+<p>With the default browser EventSource API, you can only make GET requests, and you cannot pass in a request body and custom request headers.</p>
+<ul>
+<li><a href="https://github.com/Azure/fetch-event-source">fetch-event-source</a> provides a better API for making Event Source requests.</li>
+<li><a href="https://github.com/lukeed/fetch-event-stream">fetch-event-stream</a> allows any HTTP method and built with native Web Streams API.</li>
+</ul>
 <pre><code class="language-js">import { fetchEventSource } from '@microsoft/fetch-event-source';
 
 const ctrl = new AbortController();
