--- a/kexizeroing.github.io/Git knowledge that not clear to me.html
+++ b/kexizeroing.github.io/Git knowledge that not clear to me.html
@@ -191,8 +191,8 @@ git push origin recovered-branch:recovered-branch
 </ol>
 <blockquote>
 <p>To fixup a commit:</p>
-<pre><code class="language-sh">git commit --fixup a0b1c2d3
-git rebase -i --autosquash a0b1c2d3~1
+<pre><code class="language-sh">git commit --fixup a0b1c2d3  # The new commit message will start with "fixup!" followed by the message of the original commit.
+git rebase -i --autosquash a0b1c2d3~1  # Clean up the history by combining the fixup commit with the original commit.
 </code></pre>
 </blockquote>
 <p>Another example, I want to squash my last 3 commits together into one commit.</p>
