--- a/kexizeroing.github.io/Unlock the power of Generative UI.html
+++ b/kexizeroing.github.io/Unlock the power of Generative UI.html
@@ -1,11 +1,12 @@
-<h2>[仓库源文](https://github.com/kexizeroing/kexizeroing.github.io/blob/master/src/posts/unlock the power of generative-ui.md)，<a href="https://kexizeroing.github.io/unlock-the-power-of-generative-ui">站点原文</a></h2>
+<h2><a href="https://github.com/kexizeroing/kexizeroing.github.io/blob/master/src/posts/unlock-the-power-of-generative-ui.md">仓库源文</a>，<a href="https://kexizeroing.github.io/unlock-the-power-of-generative-ui">站点原文</a></h2>
 <hr/>
 <h2>layout: "../layouts/BlogPost.astro"
 title: "Unlock the power of Generative UI"
-slug: unlock the power of generative-ui
+slug: unlock-the-power-of-generative-ui
 description: ""
-added: "Jun 14 2024"
-tags: [AI, react]</h2>
+added: "Apr 16 2024"
+tags: [AI, react]
+updatedDate: "Jun 14 2024"</h2>
 <p>The Vercel AI SDK is an open-source library designed to help developers build conversational streaming user interfaces. With the release of the <a href="https://vercel.com/blog/ai-sdk-3-generative-ui">AI SDK 3.0</a>, developers can move beyond plaintext and markdown chatbots to give LLMs rich, component-based interfaces.</p>
 <ol>
 <li>With the introduction of <a href="https://platform.openai.com/docs/guides/function-calling">Function Calling</a>, you have been able to build applications that are able to fetch realtime data.</li>
