--- a/f2h2h1.github.io/SEO的经验.html
+++ b/f2h2h1.github.io/SEO的经验.html
@@ -164,7 +164,7 @@
 <li>主动地提交网站地址给搜索引擎</li>
 <li>使用搜索引擎提供的站长工具</li>
 <li>使用一个站点分析工具</li>
-<li>除了 sitemap 和 robots.txt 之外，还可以再加上 atom 和 rss</li>
+<li>除了 sitemap 和 robots.txt 之外，还可以再加上 atom 和 rss 和 JSONFeed</li>
 <li>重视链接的分享</li>
 <li>不要搞 SEO 的作弊</li>
 </ul>
