--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 49 个博客、8581 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 49 个博客、8585 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E4%B8%80%E4%B8%AA%E8%AE%BE%E8%AE%A1%E4%BB%BF%E5%86%99%E7%9A%84%E4%BE%8B%E5%AD%90.html>2024-06-20 一个设计仿写的例子</a></li>
+
+<li><a href=yuanj.top/%E4%BA%BA%E7%94%9F%E7%AC%AC%E4%B8%80%E6%AC%A1%E2%80%9C%E9%A9%AC%E6%8B%89%E6%9D%BE%E2%80%9D.html>2024-06-19 人生第一次“马拉松”</a></li>
+
+<li><a href=yuanj.top/Xfce%20%E7%9A%84%E4%B8%80%E7%B3%BB%E5%88%97%E9%97%AE%E9%A2%98.html>2024-06-19 Xfce 的一系列问题</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202424%20-%20%E9%A6%96%E9%A9%AC%E7%A0%B4%E4%B8%89%E8%AE%B0.html>2024-06-18 折返点 2424 - 首马破三记</a></li>
 
 <li><a href=jasonkayzk.github.io/%E3%82%A2%E3%83%8B%E3%83%A1%E3%80%8C%E9%A2%A8%E3%81%8C%E5%BC%B7%E3%81%8F%E5%90%B9%E3%81%84%E3%81%A6%E3%81%84%E3%82%8B%E3%80%8D%E5%90%8D%E8%A8%80%E3%81%AE%E3%81%BE%E3%81%A8%E3%82%81.html>2024-06-17 アニメ「風が強く吹いている」名言のまとめ</a></li>
 
