--- a/kexizeroing.github.io/Start a Javascript stack project.html
+++ b/kexizeroing.github.io/Start a Javascript stack project.html
@@ -4,9 +4,9 @@
 title: "Start a Javascript stack project"
 slug: start-js-stack-project
 description: ""
-added: "June 16 2022"
+added: "Jun 16 2022"
 tags: [web]
-updatedDate: "Apr 4 2024"</h2>
+updatedDate: "Jun 18 2024"</h2>
 <h2>Start a modern web project</h2>
 <pre><code>npm create vite@latest
 
@@ -70,7 +70,11 @@ export const loader = async ({ params }: LoaderArgs) =&gt; {
 <blockquote>
 <p>An <code>invariant</code> function from <a href="https://github.com/alexreardon/tiny-invariant">tiny-invariant</a> takes a value, and if the value is falsy then the invariant function will throw. If the value is truthy, then the function will not throw.</p>
 </blockquote>
-<h3>module and require in Node.js</h3>
+<h3>Using Lightning CSS</h3>
+<p><a href="https://lightningcss.dev">Lightning CSS</a> is an extremely fast CSS parser, transformer, and minifier written in Rust. It lets you use modern CSS features and future syntax today. Features such as CSS nesting, custom media queries, high gamut color spaces, logical properties, and new selector features are automatically converted to more compatible syntax based on your browser targets. Lightning CSS is used by Vite, and soon by Tailwind and Next.js. Tools like <code>postcss</code> and <code>autoprefixer</code> are being replaced by faster, all-in-one Rust toolchains.</p>
+<p>It can be used as a library from JavaScript or Rust, or from a standalone CLI. It can also be wrapped as a plugin in other build tools, and it is built into Parcel out of the box. For example, as a standalone CLI, it can be used to compile, minify, and bundle CSS files: <code>lightningcss --minify --bundle --targets 'defaults' input.css -o output.css</code>.</p>
+<p>CSS Modules are a small but impactful enhancement on top of vanilla CSS. A CSS Module is a CSS file where all class names and animation names are scoped locally by default. They treat the classes defined in each file as unique. Each class name or identifier is renamed to include a unique hash, and a mapping is exported to JavaScript to allow referencing them. CSS Modules are available in almost every <a href="https://github.com/css-modules/css-modules/blob/master/docs/get-started.md">modern bundler and framework</a>.</p>
+<h3><code>module</code> and <code>require</code> in Node.js</h3>
 <p><strong>Node.js treats each JavaScript file as a separate module and encloses the entire code within a function wrapper</strong>: <code>(function(exports, require, module, __filename, __dirname) {})</code>. The five parameters — <code>exports</code>, <code>require</code>, <code>module</code>, <code>__filename</code>, <code>__dirname</code> are available inside each module. Even if you define a global variable in a module using <code>let</code> or <code>const</code> keywords, the variables are scoped locally to the module rather than being scoped globally.</p>
 <p>The <code>module</code> parameter refers to the object representing the current module and <code>exports</code> is a key of the <code>module</code> object which is also an object. <code>module.exports</code> is used for defining stuff that can be exported by a module. <code>exports</code> parameter and <code>module.exports</code> are the same unless you reassign <code>exports</code> within your module.</p>
 <pre><code class="language-js">exports.name = 'Alan';
@@ -118,12 +122,6 @@ module.exports = {
   ]
 }
 </code></pre>
-<p><a href="https://lightningcss.dev">Lightning CSS</a> is an extremely fast CSS parser, transformer, and minifier written in Rust. It lets you use modern CSS features and future syntax today. Features such as CSS nesting, custom media queries, high gamut color spaces, logical properties, and new selector features are automatically converted to more compatible syntax based on your browser targets. Lightning CSS includes a standalone CLI that can be used to compile, minify, and bundle CSS files: <code>lightningcss --minify --bundle --targets 'defaults' input.css -o output.css</code>.</p>
-<ul>
-<li>Transpiling modern CSS syntax to support older browsers, including vendor prefixing and syntax lowering.</li>
-<li>Supports bundling dependencies referenced by CSS <code>@import</code> rules into a single output file.</li>
-<li>Optimize your CSS to make it smaller.</li>
-</ul>
 <h3>What is core-js</h3>
 <p><code>core-js</code> is the most popular and the most universal polyfill of the JavaScript standard library, which provides support for the latest ECMAScript standard and proposals, from ancient ES5 features to bleeding edge features. It is one of the main reasons why developers can use modern ECMAScript features in their development process each day for many years, but most developers just don't know that they have this possibility because of <code>core-js</code> since they use <code>core-js</code> indirectly as it's provided by their transpilers or frameworks.</p>
 <p><code>core-js</code> is used by most of the popular websites. We can check it using <code>window['__core-js_shared__'].versions</code>, see details at https://github.com/zloirock/core-js/blob/master/docs/2023-02-14-so-whats-next.md</p>
@@ -257,7 +255,6 @@ location / {
 <li><a href="https://github.com/emilkowalski/vaul">Vaul</a> is an unstyled drawer component for React that can be used as a Dialog replacement on tablet and mobile devices.</li>
 </ol>
 <p>Then it leaves us with the decision about how to style things. This is where <a href="https://ui.shadcn.com">shadcn/ui</a> comes into the picture. It's not a component library, but more of a code registry where you can copy/paste/modify the code to your content. It's built with Tailwind and Radix. <code>shadcn/ui</code> is a collection of reusable components that can be copied and pasted into your apps. Every component can be installed separately. It also provides a CLI that can be used to easily import components into your project, as simple as <code>npx shadcn-ui add card</code>, making it even more convenient to use.</p>
-<p>Another common way for styling is using CSS Modules. Next.js has built-in support for CSS Modules using the <code>.module.css</code> extension. CSS Modules locally scope CSS by automatically creating a unique class name. This allows you to use the same class name in different files without worrying about collisions.</p>
 <h3>Design system examples</h3>
 <p>A design system is an ever evolving collection of reusable components, guided by rules that ensure consistency and speed, by being the single source of truth for any product development.</p>
 <ul>
