--- a/gitee.com/Kenneth-Lee-2012/MySummary/README.html
+++ b/gitee.com/Kenneth-Lee-2012/MySummary/README.html
@@ -371,6 +371,7 @@ uacce_fork问题建模
 设计问题总结的问题
 高层设计和下层设计的区别V2
 集合分界不同的问题
-一个简单的复杂视图建模例子</p>
+一个简单的复杂视图建模例子
+一个设计仿写的例子</p>
 <p>一些未分类的例子</p>
 <p>.. vim: tw=80 fo+=mM</p>
