--- a/kexizeroing.github.io/Debugging CSS.html
+++ b/kexizeroing.github.io/Debugging CSS.html
@@ -110,9 +110,12 @@ body:after {
 <p><em>(above picture comes from @shadeed9)</em></p>
 <pre><code class="language-css">header {
   display: grid;
-  grid-template-columns: 1fr auto 1fr;
-  /* The `grid-column-gap` property was renamed to `column-gap` in CSS3 */
-  grid-column-gap: 10px;
+  grid-template-columns: minmax(0, 1fr) auto minmax(0, 1fr);
+}
+.left-text, .right-text {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 </code></pre>
 </li>
