--- a/blog.mauve.icu/CodeTON Round 6 (Div. 2).html
+++ b/blog.mauve.icu/CodeTON Round 6 (Div. 2).html
@@ -17,7 +17,7 @@ math: true</li>
 <h2>思路</h2>
 <p>简单题，在 $k &gt; x + 1$ 或 $n &lt; k$ 的场景下无解（不可能构造一个 $MEX$ 不可达的数组），然后就随便构造就行了，保证 $MEX$ 之后，剩下所有值取最大就行</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">void solve() {
+<pre><code class="lang-cpp">void solve() {
     int _;
     cin &gt;&gt; _;
     for (int ts = 0; ts &lt; _; ++ts) {
@@ -40,7 +40,7 @@ math: true</li>
 <h2>思路</h2>
 <p>某个比特为是 $1$ 的情况下，在奇数个值异或和的结果则也是 $1$，而偶数个则为 $0$。而或运算可以让 $a$ 数组的每一个值的某些个位都变成 $1$。基于此，只需要关心 $a$ 的长度即可，若 $a$ 为奇数，那么选尽可能多的 $b$ 使得每个位都尽可能是 $1$，反之则尽可能不选，这样才能达到最大，同理可以得到最小的方案</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">void solve() {
+<pre><code class="lang-cpp">void solve() {
     int _;
     cin &gt;&gt; _;
     for (int ts = 0; ts &lt; _; ++ts) {
@@ -67,7 +67,7 @@ math: true</li>
 <p>对于任意一个值，假定其第一次在 $a$ 中出现的位置为 $i$，它第一次出现在 $b$ 地点一定是 $b_{i,i}$，同时其最后一次在矩阵中的位置一定是 $b_{j,j}$，其中 $j$ 是在数组 $a$，中出现的，最后一个比当前值更大的下标</p>
 <p>根据上面的规律，可以求出实际上每个值的位置，一定可以包裹比他大的那个值对应的矩阵，所以只需要根据值的大小排序一下他们在数组中第一次出现的位置，和最后一次出现的位置，然后从大到小遍历，保证小的值的区间能够覆盖到大的值的区间即可</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">void solve() {
+<pre><code class="lang-cpp">void solve() {
     int _;
     cin &gt;&gt; _;
     for (int ts = 0; ts &lt; _; ++ts) {
@@ -100,7 +100,7 @@ math: true</li>
 <p>回到题目中的字典序，意味着只有越前面的值越大即可，所以要尽可能满足最前面的值最大，所以直接把 $k$ 丢给处理后的第一个值，看看最多第一个值可以到多少</p>
 <p>处理完成第一个值后，那就意味着后面无论怎么贪心，第一个值一定要达到这个，否则肯定不如现在更好。另外，对于字典序而言，约前面的值价值越高，所以要尽可能让前面的值大，贪心一下即可</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">void solve() {
+<pre><code class="lang-cpp">void solve() {
     int _;
     cin &gt;&gt; _;
     for (int ts = 0; ts &lt; _; ++ts) {
