--- a/blog.mauve.icu/Codeforces Round 939 (Div. 2).html
+++ b/blog.mauve.icu/Codeforces Round 939 (Div. 2).html
@@ -20,7 +20,7 @@ description: Codeforces Round 939 (Div. 2) 个人写题记录
 <h2>思路</h2>
 <p>只需要关注第一个被踢出去的人就行了</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">void solve() {
+<pre><code class="lang-cpp">void solve() {
     int _;
     cin &gt;&gt; _;
     for (int tc = 0; tc &lt; _; ++tc) {
@@ -47,7 +47,7 @@ description: Codeforces Round 939 (Div. 2) 个人写题记录
 <h2>思路</h2>
 <p>两边的牌是映射的，所以先手出一张，后手跟一张，这样是刚刚好的，所以先手只能赚到那些两张牌都在自己手里的分数</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">void solve() {
+<pre><code class="lang-cpp">void solve() {
     int _;
     cin &gt;&gt; _;
     for (int tc = 0; tc &lt; _; ++tc) {
@@ -69,7 +69,7 @@ description: Codeforces Round 939 (Div. 2) 个人写题记录
 <h2>思路</h2>
 <p>每个位置都能变成它的横坐标和纵坐标里的较大者，简单模拟即可</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">void solve() {
+<pre><code class="lang-cpp">void solve() {
     int _;
     cin &gt;&gt; _;
     for (int tc = 0; tc &lt; _; ++tc) {
@@ -99,7 +99,7 @@ description: Codeforces Round 939 (Div. 2) 个人写题记录
 <p>比如我通过一定手段能够构建 $0, 1, 2, 3, 4, x$，就能通过一次 $MEX$ 得到 $5, 5, 5, 5, 5, 5$，
 这个时候如果我再去尝试构建 $0, 1, 2, 3, 4$ 就可以重复之前的构建过程了，重复构建前五个值，相当于递归两次即可</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">void solve() {
+<pre><code class="lang-cpp">void solve() {
     int n;
     cin &gt;&gt; n;
     vector&lt;int&gt; data(n), dp(n), dr(n);
