--- a/blog.mauve.icu/Codeforces Round 941 (Div. 2).html
+++ b/blog.mauve.icu/Codeforces Round 941 (Div. 2).html
@@ -23,7 +23,7 @@ description: Codeforces Round 941 (Div. 2) 个人写题记录
 <h2>思路</h2>
 <p>每次操作就可以整来 $k - 1$ 张的任意牌，所以只需要将任意牌单独计数，暴力循环找可以进行操作的点数，在包含任意牌的情况下，是否可以进行操作，能操作就操作</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">void solve() {
+<pre><code class="lang-cpp">void solve() {
     int _;
     cin &gt;&gt; _;
     for (int tc = 0; tc &lt; _; ++tc) {
@@ -71,7 +71,7 @@ description: Codeforces Round 941 (Div. 2) 个人写题记录
 </ul>
 <p>其他情况均不可能</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">void solve() {
+<pre><code class="lang-cpp">void solve() {
     int _;
     cin &gt;&gt; _;
     for (int tc = 0; tc &lt; _; ++tc) {
@@ -111,7 +111,7 @@ description: Codeforces Round 941 (Div. 2) 个人写题记录
 因为此时他可以选择取到只剩下一个或者一个都不剩下，就可以实现交换先后手
 所以核心是谁拿到了第一个先后手交换权，谁就能操纵整个游戏</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">void solve() {
+<pre><code class="lang-cpp">void solve() {
     int n;
     cin &gt;&gt; n;
     vector&lt;int&gt; data(n);
@@ -151,7 +151,7 @@ description: Codeforces Round 941 (Div. 2) 个人写题记录
 <p>不过稍微可能需要注意的需要再加入一个值，因为 $k$ 本身被排除在外了，所以这可能会导致原来依赖 $k$ 的值无法组成，
 例如，如果 $k = 4$，那么 $6$ 就是一个很难组成的值，因为唯一包含第 $3$ 个比特位是 $1$ 的值就被干掉了，所以需要补充一个来避免这个问题</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">void solve() {
+<pre><code class="lang-cpp">void solve() {
     int n, k, tot = 0, nxt = 1;
     cin &gt;&gt; n &gt;&gt; k;
     vector&lt;int&gt; ans;
