--- a/blog.mauve.icu/Codeforces Round 942 (Div. 2).html
+++ b/blog.mauve.icu/Codeforces Round 942 (Div. 2).html
@@ -20,7 +20,7 @@ description: Codeforces Round 942 (Div. 2) 个人写题记录
 <h2>思路</h2>
 <p>简单题，由于数据量很小，甚至可以暴力</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">void solve() {
+<pre><code class="lang-cpp">void solve() {
     int n;
     cin &gt;&gt; n;
     vector&lt;int&gt; a(n), b(n);
@@ -47,7 +47,7 @@ description: Codeforces Round 942 (Div. 2) 个人写题记录
 <h2>思路</h2>
 <p>翻转两个硬币等于没有翻转</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">void solve() {
+<pre><code class="lang-cpp">void solve() {
     int n;
     cin &gt;&gt; n;
     string str;
@@ -65,7 +65,7 @@ description: Codeforces Round 942 (Div. 2) 个人写题记录
 <p>只需要 $1, 2, 3, \dots, n, 1, 2, 3, \dots n$ 类似这样排列即可，通过二分找出每个数值都能到达的数量，然后排列起来</p>
 <p>然后是剩下的那部分，比如多了一个 $1$，那么按照上面的排列方式，将 $1$ 放在最后面还能再多一次，即每有一个多出来的种类，就能增加一个子串</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">#define int long long
+<pre><code class="lang-cpp">#define int long long
 
 void solve() {
     int n, k;
@@ -117,7 +117,7 @@ $$
 <p>容易得到，必然 $\frac{y}{z}$ 是整数，而 $gcd(y, z) = 1$，所以 $z = 1$，故 $1 + y = t \times x$</p>
 <p>所以很容易得到公式进行计算</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">#define int long long
+<pre><code class="lang-cpp">#define int long long
 
 void solve() {
     int n, m, ans = 0;
@@ -149,7 +149,7 @@ $$
 <p>容易得到，必然 $\frac{y}{z}$ 是整数，而 $gcd(y, z) = 1$，所以必然只能用 $t$ 来承接除过来的 $z$，即上述公式中的表达</p>
 <p>所以可以根据公式得到，只需要找到合理的互质数 $y, z$，即可找出有多少个 $x$ 满足条件，因为 $t$ 可以是任意值，即 $x$ 是 $y + z$ 的倍数</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">#define int long long
+<pre><code class="lang-cpp">#define int long long
 
 void solve() {
     int n, m, ans = 0;
