--- a/blog.mauve.icu/Educational Codeforces Round#154 (Div. 2).html
+++ b/blog.mauve.icu/Educational Codeforces Round#154 (Div. 2).html
@@ -18,7 +18,7 @@ math: true</li>
 <p>看起来很难的问题，实际上很容易解决。因为至少两位数，且每个数字都有，那么我只要找到几个万能的解不就行了</p>
 <p>我选择了 $13$ 和 $31$，只需要观察原数组中 $1, 3$ 的相对位置，选择其中一个输出即可</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">void solve() {
+<pre><code class="lang-cpp">void solve() {
     int _;
     cin &gt;&gt; _;
     for (int ts = 0; ts &lt; _; ++ts) {
@@ -53,7 +53,7 @@ math: true</li>
 <p>前者比较好办，直接从这个位置将字符串拆分成两半，每一半都是相同的即可</p>
 <p>后者则可以证明无解决方案。方法也很简单：因为一旦有一个不相同，那么必然需要处理成相同的，而一旦需要处理，则需要外部的来把她们抹成相同（每次操作后 01 段数量一定减少，所以只能抹去）而外部本身也没有匹配上，故需要外部的外部来抹去，依此类推，可以得到无法解决</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">void solve() {
+<pre><code class="lang-cpp">void solve() {
     int _;
     cin &gt;&gt; _;
     for (int ts = 0; ts &lt; _; ++ts) {
@@ -99,7 +99,7 @@ math: true</li>
 <li>若当前无序，那么加入一个值仍然无序</li>
 </ul>
 <h2>AC code</h2>
-<pre><code class="language-cpp">void solve() {
+<pre><code class="lang-cpp">void solve() {
     int _;
     cin &gt;&gt; _;
     string str;
@@ -171,24 +171,24 @@ math: true</li>
 <p>{% raw %}
 $$
 \left{\begin{matrix}
-dp_{i,0} = &amp;
+ dp<em>{i,0} = &amp;
 \left{\begin{matrix}
-min(dp_{i-1,0}, dp_{i-1,1}), &amp; a_{i-1} &lt; a_i \
-min(dp_{i-1,0} + 1, dp_{i-1,1}), &amp; a_{i-1} = a_i \
-min(dp_{i-1,0} + 1, dp_{i-1,1}), &amp; a_{i-1} &gt; a_i
+min(dp</em>{i-1,0}, dp<em>{i-1,1}), &amp; a</em>{i-1} &lt; a<em>i \
+min(dp</em>{i-1,0} + 1, dp<em>{i-1,1}), &amp; a</em>{i-1} = a<em>i \
+min(dp</em>{i-1,0} + 1, dp<em>{i-1,1}), &amp; a</em>{i-1} &gt; a<em>i
 \end{matrix}\right.
 \
-dp_{i,1} = &amp;
+dp</em>{i,1} = &amp;
 \left{\begin{matrix}
-dp_{i-1, 1} + 1, &amp; a_{i-1} &lt; a_i
-dp_{i-1, 1} + 1, &amp; a_{i-1} = a_i
-dp_{i-1, 1}, &amp; a_{i-1} &gt; a_i
+dp<em>{i-1, 1} + 1, &amp; a</em>{i-1} &lt; a<em>i
+dp</em>{i-1, 1} + 1, &amp; a_{i-1} = a<em>i
+dp</em>{i-1, 1}, &amp; a_{i-1} &gt; a_i
 \end{matrix}\right.
 \end{matrix}\right.
 $$
 {% endraw %}</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">void solve() {
+<pre><code class="lang-cpp">void solve() {
     int _;
     cin &gt;&gt; _;
     for (int ts = 0; ts &lt; _; ++ts) {
