--- a/blog.mauve.icu/Educational Codeforces Round#155 (Div. 2).html
+++ b/blog.mauve.icu/Educational Codeforces Round#155 (Div. 2).html
@@ -17,7 +17,7 @@ math: true</li>
 <h2>思路</h2>
 <p>简单题，只要没有人既能举起比第一个人更重的同时，能够举起更多次就行，重量很直接选第一个人能举起的上线就行</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">void solve() {
+<pre><code class="lang-cpp">void solve() {
     int _;
     cin &gt;&gt; _;
     for (int ts = 0; ts &lt; _; ++ts) {
@@ -42,7 +42,7 @@ math: true</li>
 <h2>思路</h2>
 <p>简单题，容易得出，必定每一行或者每一列都有一个棋子，这是最低的要求，然后就很简单了</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">#define int long long
+<pre><code class="lang-cpp">#define int long long
 
 void solve() {
     int _;
@@ -76,17 +76,17 @@ $$
 \begin{pmatrix}
 2 \ 1
 \end{pmatrix}
-\times
+ \times
 \begin{pmatrix}
 3 \ 2
 \end{pmatrix}
-\times
+ \times
 A^3_3
 $$
 {% endraw %}</p>
 <p>看懂了公式就能算出来了</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">#define int long long
+<pre><code class="lang-cpp">#define int long long
 
 void solve() {
     const int mod = 998244353;
@@ -127,7 +127,7 @@ void solve() {
 <p>对于每一个比特位，我们考虑遍历所有可能的右区间，对于每一个右区间，要找出左边出现了几次和右区间的前缀和的比特位结果不同的次数，那么就是这个 $r \times 2^p$ 部分的价值出现的次数，同时减去左边所有不同的 $(l-1) \times 2^p$ 的价值，就可以得到当前位置作为右区间的时候，能够带来的价值。而计算后的 $r \times 2^p$ 部分，恰好是其作为左区间的时候的 $(l-1) \times 2^p$ 的价值。</p>
 <p>所以只需要遍历一遍，记录左边出现了几次 $0$ 和几次 $1$，同时对于 $0$ 而言，产生了多少价值，同理对 $1$ 也一样，然后作为下一个节点的计算输入</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">#define int long long
+<pre><code class="lang-cpp">#define int long long
 
 void solve() {
     int n;
