--- a/blog.mauve.icu/个人网络 + NAS 折腾日记-1.html
+++ b/blog.mauve.icu/个人网络 + NAS 折腾日记-1.html
@@ -21,10 +21,11 @@ hide: true</li>
 <li>我目前主要居住在公司附近的小区，租了一个大房间，房间内仅有一个网孔。房东提供的不可撼动的网络布局很简单：光猫拨号上网，下面接一个路由器。</li>
 <li>路由器主要是起到交换机和 AP 的作用，并没有路由的意义，而后从路由器的 LAN 口出来的网线接入到每个房间的网孔上，恰好一个房间一个，当然，这个路由器也有 AP，所以也能提供 Wi-Fi，而且速度还不错。</li>
 <li>光猫很荣幸能够分配到公网的 IPv6 的一个子网段。</li>
-<li>通过盲猜了一波路由器的密码，发现其他合租人的设备是直接使用房东提供的 Wi-Fi，并没有做太多处理</li>
-</ul>
+<li><p>通过盲猜了一波路由器的密码，发现其他合租人的设备是直接使用房东提供的 Wi-Fi，并没有做太多处理</p>
 <p>大概的网络拓扑长这样</p>
-<pre><code class="language-mermaid">graph BT
+</li>
+</ul>
+<pre><code class="lang-mermaid">graph BT
 A1[他人设备1] -.Wi-Fi.-&gt; B[路由器]
 A2[他人设备2] -.Wi-Fi.-&gt; B[路由器]
 A3[他人设备3] -.Wi-Fi.-&gt; B[路由器]
@@ -63,7 +64,7 @@ C[光猫] --PPOE--&gt; D((公网))
 <h1>部署</h1>
 <h2>家庭网络</h2>
 <p>网络方面的架构则比较简单，因为对这块的特殊需求比较少，当然也因为能够改造的方面比较少，所以也就采用简单的方案</p>
-<pre><code class="language-mermaid">graph BT
+<pre><code class="lang-mermaid">graph BT
 subgraph 我家
 pad[pad] -.Wi-Fi.-&gt; mi[小米路由器]
 phone[phone] -.Wi-Fi.-&gt; mi[小米路由器]
@@ -86,7 +87,7 @@ C[光猫] --PPOE--&gt; D((公网))
 <h2>NAS 搭建</h2>
 <p>接下来是 NAS 的部分</p>
 <p>考虑到避免折腾以及后续真香的成本，我决定直接入手白群晖。选择的是四盘位的 DS423+ 这款。主要考虑到的也是使用的目的。</p>
-<p><img alt="DS423+" src="/media/wwww/share/study/聚聚/源数据/博客聚合/blog.mauve.icu/source/image/tossing-diary/personal-homework-1/DS423+.png"/></p>
+<p><img alt="DS423+" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/blog.mauve.icu/source/image/tossing-diary/personal-homework-1/DS423+.png"/></p>
 <h3>存储设置端</h3>
 <ul>
 <li>由于群晖会将第一个磁盘作为主系统盘，主要提供读取，故采用 SSD 放在第一个盘位能够非常有效的解决噪音问题<ul>
@@ -106,7 +107,7 @@ C[光猫] --PPOE--&gt; D((公网))
 <h4>方案一：QuickConnect</h4>
 <p>quick connect 可以说是非常完美的解决方案，它考虑内网直连、公网 IP 直连、UPNP 连接、打洞、转发等方案，一个地址走天下的方案，能够在任何场景下得到最好的访问途径，可以说 QuickConnect 是体验最好的方案……吗？来看看速度对比</p>
 <p>为了对比速度，我测试了一个大文件在多种场景下的速度情况，测试文件是《铃芽之旅》2K 的 mkv 打包的视频，大小为 10.64GB（9.91GiB）足够传输个几秒钟了</p>
-<p><img alt="suzume" src="/media/wwww/share/study/聚聚/源数据/博客聚合/blog.mauve.icu/source/image/tossing-diary/personal-homework-1/suzume.png"/></p>
+<p><img alt="suzume" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/blog.mauve.icu/source/image/tossing-diary/personal-homework-1/suzume.png"/></p>
 <p>测试环境，只用一根网线让 NAS 和路由器直连，然后由我的 laptop 通过 Wi-Fi 接入路由器，路由器本身开启 AP 模式。如果传输方式本身能够提供速度监控的话，那就按照监控本身为准，否则直接将 laptop 的整体网络下载速度为准</p>
 <p>首先采用理论上 TCP 下最快的方案：在 NAS 上开启 tcp 监听，同时将输入流设置为视频文件，而后在本机上通过 tcp 直接连接到 NAS 的端口，并将结果写入到本地文件</p>
 <pre><code># nas 上
@@ -117,16 +118,16 @@ nc nas.com 9090 &gt; "~/Download/Suzume.2022.2160p.WEB-DL.H265.DDP5.1.2Audio-Dre
 <p>可惜的是群晖系统没有默认携带 netcat，再去下一个的意义不大，毕竟说白了也没人这么用 NAS 的，谁下载个东西都用 netcat 啊（虽然好像我经常这样给服务器传输文件）
 当然也可以退而求其次，选择使用 SCP 的方式来拷贝文件，但也和上述问题一样：没有人平时会这样用 NAS，也就不再过多测试了</p>
 <p>那就直接上 SMB 的下载吧</p>
-<p><img alt="smb-private" src="/media/wwww/share/study/聚聚/源数据/博客聚合/blog.mauve.icu/source/image/tossing-diary/personal-homework-1/smb-private.png"/></p>
+<p><img alt="smb-private" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/blog.mauve.icu/source/image/tossing-diary/personal-homework-1/smb-private.png"/></p>
 <p>速度基本上可以稳点在 100MB/s+</p>
 <p>然后是内网通过 HTTP 协议下载的速度</p>
-<p><img alt="http-private" src="/media/wwww/share/study/聚聚/源数据/博客聚合/blog.mauve.icu/source/image/tossing-diary/personal-homework-1/http-private.png"/></p>
+<p><img alt="http-private" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/blog.mauve.icu/source/image/tossing-diary/personal-homework-1/http-private.png"/></p>
 <p>也差不多，这两者的误差几乎可以忽略</p>
 <p>然后是 QuickConnect 的在最坏的情况下（采用转发的方案）外网访问速度，我才用了 5G 热点的方式接入，也是在外网最常见的访问场景</p>
-<p><img alt="qc-forward" src="/media/wwww/share/study/聚聚/源数据/博客聚合/blog.mauve.icu/source/image/tossing-diary/personal-homework-1/qc-forward.png"/></p>
+<p><img alt="qc-forward" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/blog.mauve.icu/source/image/tossing-diary/personal-homework-1/qc-forward.png"/></p>
 <p>这就有点丢脸了，也是这个方案下最让人难以接受的原因</p>
 <p>当然还有一个令人难以接受的就是，他强制会将你的文件分享地址改成 gofile.me 这个域名，看起来就让人不太舒服</p>
-<p><img alt="qc-share" src="/media/wwww/share/study/聚聚/源数据/博客聚合/blog.mauve.icu/source/image/tossing-diary/personal-homework-1/qc-share.png"/></p>
+<p><img alt="qc-share" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/blog.mauve.icu/source/image/tossing-diary/personal-homework-1/qc-share.png"/></p>
 <h4>DDNS 和 IPv6</h4>
 <p>这两个方案本是个人最喜欢的方案，没有什么比直接连接更加干净利索的了，但……目前的居住环境既拿不到公网的 IPv4 地址，又被光猫的防火墙拦截了 IPv6 的数据，这确实让人没办法接受</p>
 <h4>内网穿透</h4>
@@ -134,7 +135,7 @@ nc nas.com 9090 &gt; "~/Download/Suzume.2022.2160p.WEB-DL.H265.DDP5.1.2Audio-Dre
 <h5>外网访问配置</h5>
 <p>租一台阿里云的 ECS，在按量计费的阿里云 ECS 的成本确实很低，百兆带宽，也只要 1k 就能用 5 年，虽然流量挺贵，1GiB 需要 ¥0.8
 但通常也不太会在外面直接看视频，毕竟要么还需要消耗手机的移动网络，要么是有预期要出远门，通常更多会提前下载在本地，比如坐飞机的时候。另外，一部电影 20G 的话，也花不了几块钱才是</p>
-<p><img alt="aliyun" src="/media/wwww/share/study/聚聚/源数据/博客聚合/blog.mauve.icu/source/image/tossing-diary/personal-homework-1/aliyun.png"/></p>
+<p><img alt="aliyun" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/blog.mauve.icu/source/image/tossing-diary/personal-homework-1/aliyun.png"/></p>
 <p>然后通过 frp 的方式进行数据传输，简单起一个 docker 镜像。</p>
 <p><code>docker-compose.yml</code> 的大概信息</p>
 <pre><code>version: '3.3'
