--- a/kexizeroing.github.io/Techniques beyond basic RAG.html
+++ b/kexizeroing.github.io/Techniques beyond basic RAG.html
@@ -6,7 +6,7 @@ slug: techniques-beyond-basic-rag
 description: ""
 added: "Jun 16 2024"
 tags: [AI]</p>
-<h2>updatedDate: "Jul 2 2024"</h2>
+<h2>updatedDate: "July 2 2024"</h2>
 <h2>Reranking</h2>
 <p>There is more to RAG than putting documents into a vector DB and adding an LLM on top. That can work, but it won't always. We are performing a semantic search across many text documents, however, the retrieval may return relevant information below our <code>top_k</code> cutoff. The metric we would measure here is <strong>recall</strong>, which measures how many relevant documents are retrieved out of the total number of relevant documents in the dataset. We may hack the metric and get perfect recall by returning everything.</p>
 <p>Unfortunately, we can't do that because LLMs have the limited context window size. <strong>LLM recall</strong> refers to the ability of an LLM to find information from the text placed within its context window. Research shows that LLM recall degrades as we put more tokens in the context window. LLMs are also less likely to follow instructions as we stuff the context window.</p>
@@ -38,7 +38,9 @@ scores = model.predict([
 </blockquote>
 <h3>Rerank API</h3>
 <p>At a high level, a rerank API is a language model which analyzes documents and reorders them based on their relevance to a given query.</p>
-<p>JinaAI Reranker (1 million free tokens): <a href="https://jina.ai/reranker">https://jina.ai/reranker</a></p>
+<ol>
+<li>JinaAI Reranker (1 million free tokens): <a href="https://jina.ai/reranker">https://jina.ai/reranker</a></li>
+</ol>
 <pre><code>curl https://api.jina.ai/v1/rerank \
   -H "Content-Type: application/json" \
   -H "Authorization: Bearer jina_api_key_here" \
@@ -62,7 +64,9 @@ scores = model.predict([
 </code></pre>
 <blockquote><p>The Reranker API allows input of a query-doc list and outputs directly the reranked top-k results. This means that, in theory, one could build a search or recommendation system using solely the Reranker—eliminating the need for BM25, embeddings, vector databases, or any pipelines, thus achieving end-to-end functionality.</p>
 </blockquote>
-<p>Cohere offers an API for reranking documents: <a href="https://cohere.com/blog/rerank">https://cohere.com/blog/rerank</a></p>
+<ol>
+<li>Cohere offers an API for reranking documents: <a href="https://cohere.com/blog/rerank">https://cohere.com/blog/rerank</a></li>
+</ol>
 <pre><code class="lang-js">import { CohereRerank } from "@langchain/cohere";
 import { Document } from "@langchain/core/documents";
 
@@ -110,6 +114,9 @@ console.log(rerankedDocuments);
 ]
  */
 </code></pre>
+<ol>
+<li>Mixedbread AI reranking: <a href="https://www.mixedbread.ai/docs/quick-start">https://www.mixedbread.ai/docs/quick-start</a></li>
+</ol>
 <h2>Query Transformation</h2>
 <p>The main idea behind the Query Transformation is that transform the user query in a way that the LLM can correctly answer the question. For instance, if the user asks an ambiguous question, our RAG retriever might retrieve incorrect documents based on the embeddings that are not very relevant to answer the user question, leading the LLM to hallucinate answers.</p>
 <h3>Query re-writing (Multi-Query or RAG Fusion)</h3>
