--- a/blog.mauve.icu/Codeforces Round 940 (Div. 2) and CodeCraft-23.html
+++ b/blog.mauve.icu/Codeforces Round 940 (Div. 2) and CodeCraft-23.html
@@ -20,7 +20,7 @@ description: Codeforces Round 940 (Div. 2) and CodeCraft-23 个人写题记录
 <h2>思路</h2>
 <p>构建成三角形就行，统计一下，每种边的数量整除 $3$ 即可</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">void solve() {
+<pre><code class="lang-cpp">void solve() {
     int _;
     cin &gt;&gt; _;
     for (int tc = 0; tc &lt; _; ++tc) {
@@ -47,7 +47,7 @@ description: Codeforces Round 940 (Div. 2) and CodeCraft-23 个人写题记录
 <p>由于求和为 $k$，且每一项都不是负数，那么必然可以得到所有值都比 $k$ 小，最大起码也是等于</p>
 <p>而题目要求比特位为 $1$ 尽可能多，而尽可能多的值必然是 $2^x - 1$，所以找最大的 $x$ 使得 $2^x \leq k$，然后剩下的数值不重要了，补充满 $k$ 即可</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">void solve() {
+<pre><code class="lang-cpp">void solve() {
     int _;
     cin &gt;&gt; _;
     for (int tc = 0; tc &lt; _; ++tc) {
@@ -88,7 +88,7 @@ description: Codeforces Round 940 (Div. 2) and CodeCraft-23 个人写题记录
 且第一行可能是黑的也可能是白的，所以递推公式就是</p>
 <p>$a_n = a_{n-1} + 2 \times (n - 1) \times a_{n - 2}$</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">#define int long long
+<pre><code class="lang-cpp">#define int long long
 
 void solve() {
     vector&lt;int&gt; ans(3e5 + 10);
@@ -127,13 +127,89 @@ void solve() {
 而已知一个比特位 $a_y$ 是 $1$ 但是 $f(x, z)$ 是 $0$，那么必然在 $[x, z]$ 中，这个比特位为 $1$ 的，出现了偶数次，且至少 $2$ 次</p>
 <p>所以只需要对于每一个可能的 $y$，找这个 $y$ 最大的为 $1$ 的那个比特位，为 $1$ 的次数恰好为偶数，且包含 $y$ 的区间数量即可。我采用了双向的奇偶标记</p>
 <p>例如第三个例子，可以得到如下的表格</p>
-<p>| index | origin | 2^2 | forward | back | 2^1 | forward | back | 2^0 | forward | back |
-|:-----:|:------:|:---:|:-------:|:----:|:---:|:-------:|:----:|:---:|:-------:|:----:|
-|   0   |   7    |  1  |   odd   | even |  1  |   odd   | even |  1  |   odd   | even |
-|   1   |   3    |  0  |   odd   | odd  |  1  |  even   | odd  |  1  |  even   | odd  |
-|   2   |   7    |  1  |  even   | odd  |  1  |   odd   | even |  1  |   odd   | even |
-|   3   |   2    |  0  |  even   | even |  1  |  even   | odd  |  0  |   odd   | odd  |
-|   4   |   1    |  0  |  even   | even |  0  |  even   | even |  1  |  even   | odd  |</p>
+<table>
+<thead><tr>
+<th style="text-align:center">index</th>
+<th style="text-align:center">origin</th>
+<th style="text-align:center">2^2</th>
+<th style="text-align:center">forward</th>
+<th style="text-align:center">back</th>
+<th style="text-align:center">2^1</th>
+<th style="text-align:center">forward</th>
+<th style="text-align:center">back</th>
+<th style="text-align:center">2^0</th>
+<th style="text-align:center">forward</th>
+<th style="text-align:center">back</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:center">0</td>
+<td style="text-align:center">7</td>
+<td style="text-align:center">1</td>
+<td style="text-align:center">odd</td>
+<td style="text-align:center">even</td>
+<td style="text-align:center">1</td>
+<td style="text-align:center">odd</td>
+<td style="text-align:center">even</td>
+<td style="text-align:center">1</td>
+<td style="text-align:center">odd</td>
+<td style="text-align:center">even</td>
+</tr>
+<tr>
+<td style="text-align:center">1</td>
+<td style="text-align:center">3</td>
+<td style="text-align:center">0</td>
+<td style="text-align:center">odd</td>
+<td style="text-align:center">odd</td>
+<td style="text-align:center">1</td>
+<td style="text-align:center">even</td>
+<td style="text-align:center">odd</td>
+<td style="text-align:center">1</td>
+<td style="text-align:center">even</td>
+<td style="text-align:center">odd</td>
+</tr>
+<tr>
+<td style="text-align:center">2</td>
+<td style="text-align:center">7</td>
+<td style="text-align:center">1</td>
+<td style="text-align:center">even</td>
+<td style="text-align:center">odd</td>
+<td style="text-align:center">1</td>
+<td style="text-align:center">odd</td>
+<td style="text-align:center">even</td>
+<td style="text-align:center">1</td>
+<td style="text-align:center">odd</td>
+<td style="text-align:center">even</td>
+</tr>
+<tr>
+<td style="text-align:center">3</td>
+<td style="text-align:center">2</td>
+<td style="text-align:center">0</td>
+<td style="text-align:center">even</td>
+<td style="text-align:center">even</td>
+<td style="text-align:center">1</td>
+<td style="text-align:center">even</td>
+<td style="text-align:center">odd</td>
+<td style="text-align:center">0</td>
+<td style="text-align:center">odd</td>
+<td style="text-align:center">odd</td>
+</tr>
+<tr>
+<td style="text-align:center">4</td>
+<td style="text-align:center">1</td>
+<td style="text-align:center">0</td>
+<td style="text-align:center">even</td>
+<td style="text-align:center">even</td>
+<td style="text-align:center">0</td>
+<td style="text-align:center">even</td>
+<td style="text-align:center">even</td>
+<td style="text-align:center">1</td>
+<td style="text-align:center">even</td>
+<td style="text-align:center">odd</td>
+</tr>
+</tbody>
+</table>
 <p>这个表格的制作方式：</p>
 <ul>
 <li>先计算出每个值的每个比特位，放在 $2^x$ 列上</li>
@@ -142,7 +218,7 @@ void solve() {
 </ul>
 <p>然后统计某个位置，左边的 back 下不同类型的数量和右边的 forward 不同的类型数量，再做乘法即可</p>
 <h2>AC code</h2>
-<pre><code class="language-cpp">#define int long long
+<pre><code class="lang-cpp">#define int long long
 
 void solve() {
     int _;
