--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 48 个博客、8565 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 48 个博客、8572 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=yuanj.top/%E6%9C%8D%E5%8A%A1%E5%99%A8%E4%B8%8A%E7%9A%84%E4%B8%80%E6%8F%BD%E5%AD%90%E6%9C%8D%E5%8A%A1.html>2024-07-05 服务器上的一揽子服务</a></li>
+
+<li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E5%9B%9E%E7%AD%94%E5%87%A0%E4%B8%AA%E9%97%AE%E9%A2%98.html>2024-07-05 回答几个问题</a></li>
+
+<li><a href=codeinchinese.com/%E4%BD%A0%E6%80%8E%E4%B9%88%E7%9C%8B%E5%BE%85%E4%BB%93%E9%A2%89%E7%BC%96%E7%A8%8B%E8%AF%AD%E8%A8%80%EF%BC%9F%E4%BB%93%E9%A2%89%E7%BC%96%E7%A8%8B%E8%AF%AD%E8%A8%80%E8%83%BD%E5%90%A6%E6%88%90%E5%8A%9F%EF%BC%9F.html>2024-07-05 你怎么看待仓颉编程语言？仓颉编程语言能否成功？</a></li>
 
 <li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E5%A4%A9%E4%B8%8B%E7%9A%86%E8%B0%93%E6%88%91%E9%81%93%E5%A4%A7.html>2024-07-03 天下皆谓我道大</a></li>
 
@@ -187,7 +193,11 @@
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202418%20-%202024%20%E9%9A%A7%E9%81%93%E9%A9%AC%E8%AE%AD%E7%BB%83%E7%AC%AC%2013%20%E5%91%A8%20%E7%97%85%E4%BA%86.html>2024-05-06 折返点 2418 - 2024 隧道马训练第 13 周 病了</a></li>
 
+<li><a href=blog.mauve.icu/Codeforces%20Round%20942%20%28Div.%202%29.html>2024-05-05 Codeforces Round 942 (Div. 2)</a></li>
+
 <li><a href=yuanj.top/ATAC-Seq%20%E5%88%86%E6%9E%90%E6%B5%81%E7%A8%8B.html>2024-05-03 ATAC-Seq 分析流程</a></li>
+
+<li><a href=blog.mauve.icu/Codeforces%20Round%20941%20%28Div.%202%29.html>2024-05-03 Codeforces Round 941 (Div. 2)</a></li>
 
 <li><a href=codeinchinese.com/%E5%9B%BD%E5%86%85%E5%88%B0%E5%BA%95%E8%AF%A5%E4%B8%8D%E8%AF%A5%E4%B8%80%E6%A3%92%E5%AD%90%E6%89%93%E6%AD%BB%E5%8F%91%E8%BE%BE%E5%9B%BD%E5%AE%B6%E7%9A%84%E5%BF%AB%E4%B9%90%E6%95%99%E8%82%B2%EF%BC%9F.html>2024-05-03 国内到底该不该一棒子打死发达国家的快乐教育？</a></li>
 
@@ -201,7 +211,11 @@
 
 <li><a href=yuanj.top/%E7%82%B9%E7%82%B9%E7%82%B9%EF%BC%81TBtools%20%E5%AE%8C%E6%88%90%E8%AE%BA%E6%96%87%E5%A4%8D%E7%8E%B0.html>2024-04-27 点点点！TBtools 完成论文复现</a></li>
 
+<li><a href=blog.mauve.icu/Codeforces%20Round%20940%20%28Div.%202%29%20and%20CodeCraft-23.html>2024-04-27 Codeforces Round 940 (Div. 2) and CodeCraft-23</a></li>
+
 <li><a href=yuanj.top/%E6%8A%9B%E5%BC%83%20WSL2%20%E4%BD%BF%E7%94%A8%20scoop%20%E6%90%AD%E5%BB%BA%E5%BC%80%E5%8F%91%E7%8E%AF%E5%A2%83.html>2024-04-25 抛弃 WSL2 使用 scoop 搭建开发环境</a></li>
+
+<li><a href=blog.mauve.icu/%E6%97%A5%E6%9C%AC%E6%97%85%E6%B8%B8%E6%9D%82%E8%AE%B0-%E4%B8%9C%E4%BA%AC%E7%AF%87.html>2024-04-23 日本旅游杂记-东京篇</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%96%B0%E7%88%B8%E4%BA%94%E5%B9%B4%E8%AE%A1%E5%88%92%20-%20357%20%E4%B8%8D%E5%9C%A8%E5%9C%BA.html>2024-04-23 新爸五年计划 - 357 不在场</a></li>
 
@@ -1059,7 +1073,7 @@
 
 <li><a href=yuanj.top/%E5%AD%A4%E7%8B%AC%E6%98%AF%E4%B8%80%E4%B8%AA%E4%BA%BA%E7%9A%84%E7%8B%82%E6%AC%A2.html>2023-10-02 孤独是一个人的狂欢</a></li>
 
-<li><a href=blog.mauve.icu/Educational%20Codeforces%20Round%23152%20%28Div.%202%29.html>2023-10-02 Educational Codeforces Round#152 (Div. 2)</a></li>
+<li><a href=blog.mauve.icu/Educational%20Codeforces%20Round%23155%20%28Div.%202%29.html>2023-10-02 Educational Codeforces Round#155 (Div. 2)</a></li>
 
 <li><a href=yuanj.top/%E9%9C%B2%E4%BB%8E%E4%BB%8A%E5%A4%9C%E7%99%BD%EF%BC%8C%E6%9C%88%E6%98%AF%E6%95%85%E4%B9%A1%E6%98%8E.html>2023-10-01 露从今夜白，月是故乡明</a></li>
 
@@ -1097,7 +1111,7 @@
 
 <li><a href=lihan3238.github.io/hugo%E5%8D%9A%E5%AE%A2%E9%9F%B3%E4%B9%90%E7%BB%84%E4%BB%B6.html>2023-09-23 hugo博客音乐组件</a></li>
 
-<li><a href=blog.mauve.icu/Codeforces%20Round%20897%20%28Div.%202%29.html>2023-09-23 Codeforces Round 897 (Div. 2)</a></li>
+<li><a href=blog.mauve.icu/CodeTON%20Round%206%20%28Div.%202%29.html>2023-09-23 CodeTON Round 6 (Div. 2)</a></li>
 
 <li><a href=hijiangtao.github.io/%E3%80%8A%E5%9B%9B%E5%8D%83%E5%91%A8%E3%80%8B%E8%AF%BB%E4%B9%A6%E6%91%98%E8%A6%81.html>2023-09-23 《四千周》读书摘要</a></li>
 
@@ -1209,7 +1223,7 @@
 
 <li><a href=blog.mauve.icu/%E5%B7%A6%E5%80%BC-%E5%8F%B3%E5%80%BC-%E5%B0%86%E4%BA%A1%E5%80%BC.html>2023-09-03 左值-右值-将亡值</a></li>
 
-<li><a href=blog.mauve.icu/Educational%20Codeforces%20Round%23152%20%28Div.%202%29.html>2023-09-02 Educational Codeforces Round#152 (Div. 2)</a></li>
+<li><a href=blog.mauve.icu/Educational%20Codeforces%20Round%23154%20%28Div.%202%29.html>2023-09-02 Educational Codeforces Round#154 (Div. 2)</a></li>
 
 <li><a href=codeinchinese.com/%E4%B8%BA%E4%BB%80%E4%B9%88%E4%B8%8D%E5%8F%AF%E5%A4%A7%E5%BC%A0%E6%97%97%E9%BC%93%E5%9C%B0%E6%8E%A8%E5%8A%A8%E2%80%9C%E6%B1%89%E5%AD%97%E7%BC%96%E7%A8%8B%E2%80%9D%EF%BC%9F.html>2023-09-02 为什么不可大张旗鼓地推动“汉字编程”？</a></li>
 
@@ -2789,7 +2803,7 @@
 
 <li><a href=conge.livingwithfcs.org/%E6%82%BC%E5%BF%B5Mark.html>2022-05-28 悼念Mark</a></li>
 
-<li><a href=blog.mauve.icu/Codeforces%20Round%23706%28Div.%202%29-Let%27s%20Go%20Hiking.html>2022-05-28 Codeforces Round#706(Div. 2)-Let's Go Hiking</a></li>
+<li><a href=blog.mauve.icu/Codeforces%20Round%23789%28Div.%202%29.html>2022-05-28 Codeforces Round#789(Div. 2)</a></li>
 
 <li><a href=tifa-233.com/%E6%AF%94%E8%B5%9B%E8%AE%B0%E5%BD%95%20-%20Codeforces%20Round%20%23794%20%28Div.%202%29%20%28A-D%29.html>2022-05-27 比赛记录 - Codeforces Round #794 (Div. 2) (A-D)</a></li>
 
