--- a/iphyer.github.io/CR-V 换电池.html
+++ b/iphyer.github.io/CR-V 换电池.html
@@ -8,9 +8,9 @@ comments: true</p>
 <p>昨天车忽然打不着火了，虽然灯都是正常但是无法打着火，显示灯一片混乱，如下图所示，</p>
 <p><img alt="CR-V Status" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/iphyer.github.io/images/battery/CRVStatus.jpg"/></p>
 <p>还好上网搜索下了，有人和我一模一样的问题，</p>
-<p><img alt="CR-V same issue" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/iphyer.github.io/images/battery/info.jpg"/></p>
+<p><img alt="CR-V same issue" src="/Users/xuanwu/work/聚聚/中文博客集锦/源数据/博客聚合/iphyer.github.io/images/battery/Info.jpg"/></p>
 <p>这里写个博客简单记录下，也提醒自己，汽车电池都是易耗品，一般 3 ～ 4 年就需要更换，我的电池已经用了 5 年了，其实 it did a good job。</p>
-<p>不过，修车的时候记录下为什么美国人民都讨厌 dealer，买给我电池的 dealer 说电池保修 7 年，所以价格贵我也认了。结果去了之后发现他们是前 36 个月 Warranty 是 100% coverage，后面每 6 个月就会有不同比例的缩减 coverage，直到 8 年归零。</p>
+<p>不过，修车的时候也再次体会到为什么美国人民都讨厌 dealer。卖给我电池的 dealer 说电池保修 8 年，所以价格贵我也认了。结果去了之后发现他们是前 36 个月 Warranty 是 100% coverage，后面每 6 个月就会有不同比例的缩减 coverage，直到 8 年归零。</p>
 <p>真是让人无语。。。</p>
 <p>他说的也没错，确实是 8 年 Warranty，不过是这个 Warranty，和一般人的理解都不一样。</p>
-<p>当然，还是要回到基本的物理原理，电池一般只能用 3 ～ 4 年, 这个 8 年 Warranty，他敢说，物理也不保真啊！</p>
+<p>当然，也是我 Naive 了，还是要回到基本的物理原理，电池一般只能用 3 ～ 4 年, 这个 8 年 Warranty，他敢说，物理也不保真啊！</p>
